--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.6
+  flutter_bloc: ^7.2.0
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
